--- a/app/src/main/res/drawable/rectangle_full_green.xml
+++ b/app/src/main/res/drawable/rectangle_full_green.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
-    <!-- you can use any color you want I used here gray color-->
-    <solid android:color="#201AB000"/>
-    <stroke
-        android:width="1dp"
-        android:color="#06B000" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:type="linear"
+        android:angle="90"
+        android:startColor="#52A7CC"
+        android:endColor="#EE8CAF" />
+    <corners android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp">
+    </corners>
 </shape>
