--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,10 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="299dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="0dp"
         android:adjustViewBounds="true"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -77,7 +80,7 @@
         android:layout_width="355dp"
         android:layout_height="44dp"
         android:layout_marginTop="35dp"
-        android:background="@drawable/rectangle_gradient"
+        android:backgroundTint="@drawable/rectangle_gradient"
         android:text="Login"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,12 +92,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="269dp"
+        android:layout_marginTop="15dp"
         android:text="Welcome!"
         android:textColor="#000000"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView5"
